# oak

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  publish.yml  pull_request.yml
oak/collections/abc/: __init__.py  _sliceable_sequence.py
oak/collections/mixins/: __init__.py  _batchable.py  _searchable.py
oak/collections/utils/: __init__.py  _batch.py  _group_by.py  _search.py
oak/math/: __init__.py  _mceil.py  _mfloor.py  _mround.py
tests/: test_oak.py
tests/collections/abc/: test_sliceable_sequence.py
tests/collections/mixins/: test_batchable.py  test_searchable.py
tests/collections/utils/: test_batch.py  test_group_by.py  test_search.py
tests/math/: test_mceil.py  test_mfloor.py  test_mround.py
